added ini with new config

--- a/grott.ini
+++ b/grott.ini
@@ -57,8 +57,6 @@ invtype = min
 ip = 127.0.0.1
 port = 5781
 
-
-
 [MQTT]
 # Mqtt parameters definitions
 # Be aware nomqtt = True means no MQTT processing will be done!!!!!!
@@ -70,6 +68,10 @@ port = 5781
 auth = True
 user = admin
 password = admin
+
+[locowatt]
+# locowatt default parameters
+haDeviceConfigPath = "asdf"
 
 [PVOutput]
 # PVOutput parameters definitions
