switch default config to remote growatt server for now

--- a/grott.ini
+++ b/grott.ini
@@ -51,11 +51,12 @@ invtype = min
 # specify only if the IP address of server.growatt.com is changed
 # The address as of Nov 2022 is 47.91.67.66
 
-#ip = server.growatt.com
+ip = server.growatt.com
 #ip = 47.91.67.66
-#port = 5279                                                        
-ip = 127.0.0.1
-port = 5781
+port = 5279                                                        
+
+#ip = 127.0.0.1
+#port = 5781
 
 [MQTT]
 # Mqtt parameters definitions
