--- a/grott.ini
+++ b/grott.ini
@@ -40,7 +40,7 @@
 # Specify inverter id (not necessary in version >2.1.0 if compat = false!)
 #inverterid = ABC1234567
 # Specify the type of the inverter (default/sph/spf/max)
-invtype = min
+invtype = MID
 
 # Decrypt is False if growatt communication is not encrypted (older inverters), (not necessary in version
 # >2.1.0 if compat = false!)
