corrected typo in MID config

--- a/T06NNNNXMID.json
+++ b/T06NNNNXMID.json
@@ -1,4 +1,4 @@
-{"T06NNNNXMIN": {
+{"T06NNNNXMID": {
             "decrypt"           : {"value" :"true"},
             "pvserial"          : {"value" :76, "length" : 10, "type" : "text", "divide" : 10},
             "date"              : {"value" :136, "divide" : 10}, 
