started adding Unit properties to config values

--- a/T06NNNNXMID.json
+++ b/T06NNNNXMID.json
@@ -5,36 +5,36 @@
             "group1start"       : {"value" :150, "length" : 2, "type" : "num","incl" : "no"}, 
             "group1end"         : {"value" :154, "length" : 2, "type" : "num","incl" : "no"}, 
             "pvstatus"          : {"value" : 158,"length" : 2,"type" : "num","divide" : 1},
-            "pvpowerin"         : {"value" : 162,"length" : 4,"type" : "num","divide" : 10},
+            "pvpowerin"         : {"value" : 162,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
             "pv1voltage"        : {"value" : 170,"length" : 2,"type" : "num","divide" : 10},
             "pv1current"        : {"value" : 174,"length" : 2,"type" : "num","divide" : 10},
-            "pv1watt"           : {"value" : 178,"length" : 4,"type" : "num","divide" : 10},
+            "pv1watt"           : {"value" : 178,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
             "pv2voltage"        : {"value" : 186,"length" : 2,"type" : "num","divide" : 10},
             "pv2current"        : {"value" : 190,"length" : 2,"type" : "num","divide" : 10},
-            "pv2watt"           : {"value" : 194,"length" : 4,"type" : "num","divide" : 10},
+            "pv2watt"           : {"value" : 194,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
             "pv3voltage"        : {"value" : 202,"length" : 2,"type" : "num","divide" : 10},
             "pv3current"        : {"value" : 206,"length" : 2,"type" : "num","divide" : 10},
-            "pv3watt"           : {"value" : 210,"length" : 4,"type" : "num","divide" : 10},
+            "pv3watt"           : {"value" : 210,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
             "pv4voltage"        : {"value" : 218,"length" : 2,"type" : "num","divide" : 10},
             "pv4current"        : {"value" : 222,"length" : 2,"type" : "num","divide" : 10},
-            "pv4watt"           : {"value" : 226,"length" : 4,"type" : "num","divide" : 10},
-            "pvpowerout"        : {"value" : 250,"length" : 4,"type" : "numx","divide" : 10},
+            "pv4watt"           : {"value" : 226,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
+            "pvpowerout"        : {"value" : 250,"length" : 4,"type" : "numx","divide" : 10, "unit":"W"},
             "pvfrequentie"      : {"value" : 258,"length" : 2,"type" : "num","divide" : 100},
             "pvgridvoltage"     : {"value" : 262,"length" : 2,"type" : "num","divide" : 10},
             "pvgridcurrent"     : {"value" : 266,"length" : 2,"type" : "num","divide" : 10},
-            "pvgridpower"       : {"value" : 270,"length" : 4,"type" : "num","divide" : 10},
+            "pvgridpower"       : {"value" : 270,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
             "pvgridvoltage2"    : {"value" : 278,"length" : 2,"type" : "num","divide" : 10},
             "pvgridcurrent2"    : {"value" : 282,"length" : 2,"type" : "num","divide" : 10},
-            "pvgridpower2"      : {"value" : 286,"length" : 4,"type" : "num","divide" : 10},
+            "pvgridpower2"      : {"value" : 286,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
             "pvgridvoltage3"    : {"value" : 294,"length" : 2,"type" : "num","divide" : 10},
             "pvgridcurrent3"    : {"value" : 298,"length" : 2,"type" : "num","divide" : 10},
-            "pvgridpower3"      : {"value" : 302,"length" : 4,"type" : "num","divide" : 10},
+            "pvgridpower3"      : {"value" : 302,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
             "vacrs"            : {"value" : 310,"length" : 2,"type" : "num","divide" : 10},
             "vacst"            : {"value" : 314,"length" : 2,"type" : "num","divide" : 10},
             "vactr"            : {"value" : 318,"length" : 2,"type" : "num","divide" : 10},
-            "ptousertotal"      : {"value" : 322,"length" : 4,"type" : "num","divide" : 10},
-            "ptogridtotal"      : {"value" : 330,"length" : 4,"type" : "num","divide" : 10},
-            "ptoloadtotal"      : {"value" : 338,"length" : 4,"type" : "num","divide" : 10},
+            "ptousertotal"      : {"value" : 322,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
+            "ptogridtotal"      : {"value" : 330,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
+            "ptoloadtotal"      : {"value" : 338,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
             "totworktime"       : {"value" : 346,"length" : 4,"type" : "num","divide" : 7200},
             "pvenergytoday"     : {"value" : 354,"length" : 4,"type" : "num","divide" : 10},
             "pvenergytotal"     : {"value" : 362,"length" : 4,"type" : "num","divide" : 10},
@@ -116,8 +116,8 @@
             "bdc1_illc"         : {"value" : 866,"length" : 2,"type" : "num","divide" : 10},
             "bdc1_tempa"        : {"value" : 870,"length" : 2,"type" : "num","divide" : 10},
             "bdc1_tempb"        : {"value" : 874,"length" : 2,"type" : "num","divide" : 10},
-            "bdc1_pdischr"      : {"value" : 878,"length" : 4,"type" : "num","divide" : 10},
-            "bdc1_pchr"         : {"value" : 886,"length" : 4,"type" : "num","divide" : 10},
+            "bdc1_pdischr"      : {"value" : 878,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
+            "bdc1_pchr"         : {"value" : 886,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
             "bdc1_edischrtotal" : {"value" : 894,"length" : 4,"type" : "num","divide" : 10},
             "bdc1_echrtotal"    : {"value" : 902,"length" : 4,"type" : "num","divide" : 10},
             "bdc1_flag"          : {"value" : 914,"length" : 2,"type" : "num","divide" : 1},
@@ -133,8 +133,8 @@
             "bdc2_illc"         : {"value" : 958,"length" : 2,"type" : "num","divide" : 10},
             "bdc2_tempa"        : {"value" : 962,"length" : 2,"type" : "num","divide" : 10},
             "bdc2_tempb"        : {"value" : 966,"length" : 2,"type" : "num","divide" : 10},
-            "bdc2_pdischr"      : {"value" : 970,"length" : 4,"type" : "num","divide" : 10},
-            "bdc2_pchr"         : {"value" : 978,"length" : 4,"type" : "num","divide" : 10},
+            "bdc2_pdischr"      : {"value" : 970,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
+            "bdc2_pchr"         : {"value" : 978,"length" : 4,"type" : "num","divide" : 10, "unit":"W"},
             "bdc2_edischrtotal" : {"value" : 986,"length" : 4,"type" : "num","divide" : 10},
             "bdc2_echrtotal"    : {"value" : 994,"length" : 4,"type" : "num","divide" : 10},
             "bdc2_flag"          : {"value" : 1006,"length" : 4,"type" : "num","divide" : 1},
