changed default ini to no mqtt auth

--- a/grott.ini
+++ b/grott.ini
@@ -66,9 +66,9 @@ port = 5279
 #ip = localhost
 #port = 1883
 #topic= energy/growatt
-auth = True
-user = admin
-password = admin
+#auth = True
+#user = admin
+#password = admin
 
 [locowatt]
 # locowatt default parameters
