sendbuf set to false in .ini for now to get rid of buffered data

--- a/grott.ini
+++ b/grott.ini
@@ -31,7 +31,7 @@
 #time = auto 
 
 # Sendbuf = True / False parameter to enable  / disable sending historical (buffered) data. Default is sendbuf = True.
-#sendbuf = True 
+sendbuf = False 
 
 # Compat is True and valoffset needs to be set if offset / growatt protocol has been changed. 
 #compat = False
