--- a/grott.service
+++ b/grott.service
@@ -8,10 +8,10 @@ After=network.target
 [Service]
 SyslogIdentifier=grott
 Type=simple
-User=pi
+User=admin
 
-WorkingDirectory=/home/pi/grott/
-ExecStart=-/usr/bin/python3 -u /home/pi/grott/grott.py -v
+WorkingDirectory=/home/admin/grottLocowatt/
+ExecStart=-/usr/bin/python3 -u /home/admin/grottLocowatt/grott.py -v
 #StandardInput=socket
 StandardOutput=journal
 
