--- a/grott.service
+++ b/grott.service
@@ -11,7 +11,7 @@ Type=simple
 User=admin
 
 WorkingDirectory=/home/admin/grottLocowatt/
-ExecStart=-/usr/bin/python3 -u /home/admin/grottLocowatt/grott.py -v
+ExecStart=-/usr/bin/python3 -u /home/admin/grottLocowatt/grott.py
 #StandardInput=socket
 StandardOutput=journal
 
