--- a/grott.ini
+++ b/grott.ini
@@ -52,12 +52,12 @@ invtype = MID
 # The address as of Nov 2022 is 47.91.67.66
 
 #ip = server.growatt.com
-ip = www.google.de
+#ip = www.google.de
 #ip = 47.91.67.66
-port = 5279                                                        
+#port = 5279                                                        
 
-#ip = 127.0.0.1
-#port = 5780
+ip = 127.0.0.1
+port = 5780
 
 [MQTT]
 # Mqtt parameters definitions
