--- a/grott.ini
+++ b/grott.ini
@@ -51,8 +51,8 @@ invtype = MID
 # specify only if the IP address of server.growatt.com is changed
 # The address as of Nov 2022 is 47.91.67.66
 
-ip = server.growatt.com
-#ip = www.google.de
+#ip = server.growatt.com
+ip = www.google.de
 #ip = 47.91.67.66
 port = 5279                                                        
 
