changed growatt server in ini to default

--- a/grott.ini
+++ b/grott.ini
@@ -51,10 +51,10 @@ invtype = MID
 # specify only if the IP address of server.growatt.com is changed
 # The address as of Nov 2022 is 47.91.67.66
 
-ip = server.growatt.com
+#ip = server.growatt.com
 #ip = www.google.de
 #ip = 47.91.67.66
-port = 5279                                                        
+#port = 5279                                                        
 
 #ip = 127.0.0.1
 #port = 5781
