reverting to correct growatt remote server

--- a/grott.ini
+++ b/grott.ini
@@ -52,9 +52,9 @@ invtype = MID
 # The address as of Nov 2022 is 47.91.67.66
 
 #ip = server.growatt.com
-ip = invalidtestip
+#ip = invalidtestip
 #ip = 47.91.67.66
-port = 5279                                                        
+#port = 5279                                                        
 
 #ip = 127.0.0.1
 #port = 5781
