changed service to launch everything directly

--- a/browserLauncher.service
+++ b/browserLauncher.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/home/admin/grottLocowatt/browserLauncher.sh
+ExecStart=startx /usr/bin/chromium http://127.0.0.1/solar-board/0 --kiosk --window-size=720,1280 --window-position=0,0 --no-first-run --noerrdialogs
 User=admin
 Restart=on-failure
 
